2025-05-04  Robby Stephenson  <robby@periapsis.org>

	* Updated GiantBomb data source.

2025-02-10  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 4.1.1.
	* Updated ComicVine data source.

2025-02-09  Robby Stephenson  <robby@periapsis.org>

	* Updated Filmaffinity data source.

2025-02-08  Robby Stephenson  <robby@periapsis.org>

	* Added configurable image size to Moviemeter data source.
	* Added option to collapse multi-disc tracks into single field (Bug 499401).

2025-02-01  Robby Stephenson  <robby@periapsis.org>

	* Added configurable image size to Discogs data source.

2025-01-18  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug that pulled invalid year from isbn in Colnect search.

2025-01-14  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 4.1.

2024-12-08  Robby Stephenson  <robby@periapsis.org>

	* Fixed print preview (Bug 496816).

2024-12-01  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug when printing (Bug 496648).

2024-11-13  Robby Stephenson  <robby@periapsis.org>

	* Added option to disable the welcome screen.

2024-10-24  Robby Stephenson  <robby@periapsis.org>

	* Improved image loading to be only on need (Bug 490922).

2024-10-21  Robby Stephenson  <robby@periapsis.org>

	* Added property to disable line feed replacement in Paragraph fields.

2024-09-30  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 4.0.1.

2024-09-20  Robby Stephenson  <robby@periapsis.org>

	* Fixed encoding for HTML export for Qt6 (Bug 493180).

2024-09-15  Robby Stephenson  <robby@periapsis.org>

	* Fixed compilation with Qt6/msvc.

2024-09-10  Robby Stephenson  <robby@periapsis.org>

	* Added menu item to change application language.

2024-09-04  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 4.0.

2024-08-06  Robby Stephenson  <robby@periapsis.org>

	* Updated BoardGameGeek data to replace HTML entities (Bug 491340).

2024-06-24  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.5.